2003-12-12  Jani Monoses <jani@iv.ro>

	* src/net/tcp.c: Cancel retransmission timer when SYN is acked
	otherwise an open active connection which doesn't send data
	eventually resends the SYN resulting in reset from the peer.

2003-12-08  Gary Thomas  <gary@mlbassoc.com>

	* cdl/redboot.cdl: Better handling of GDB stubs support.  This
	should be automatically included if the platform supports GDB.
	Disabling CYGDBG_HAL_DEBUG_GDB_INCLUDE_STUBS (in the common HAL)
	will fully disable GDB support.

2003-12-05  Gary Thomas  <gary@mlbassoc.com>

	* src/decompress.c (gzip_init): Memory pool initialization should
	only be done in _zlib_init().

2003-12-05  Ian Campbell  <icampbell@arcom.com>

	* src/decompress.c: Ensure that free'd blocks are returned to the
	free pool and that adjacent free blocks are merged. Initialise the
	pool in _zlib_init() so that things are initialised even when
	gzip_init hasn't been called.

2003-12-05  Gary Thomas  <gary@mlbassoc.com>

	* src/io.c (_rb_gets_preloaded): ^A could have moved the cursor to
	the wrong location on the screen if ^F/^B had been used.

2003-12-03  David Vrabel  <dvrabel@arcom.com>

	* src/time_date.cxx (do_time_date): Use YYYY/MM/DD HH:MM:SS format
	throughout (instead of the American specific format).  Expand
	range of valid years to 1970 - 2034 (instead of 2000 - 2034).
	
2003-11-27  David Woodhouse  <dwmw2@redhat.com>

	* cdl/redboot.cdl, fs/fileio.c, include/fs/fileio.h, src/load.c: 
	Support for mounting and loading files from fileio file systems
	such as JFFS2.

2003-11-25  John Dallaway  <jld@ecoscentric.com>

	* src/fconfig.c (load_flash_config):
	Fix typo in output string.
	
2003-11-24  Gary Thomas  <gary@mlbassoc.com>

	* src/net/bootp.c (__bootp_find_local_ip): 
	Suppress diagnostic message that DNS info found.

2002-11-24  Jani Monoses  <jani@iv.ro>

	* src/flash.c: Remove references to FLASH_MIN_WORKSPACE.

2003-11-21  David Vrabel  <dvrabel@arcom.com>
